projects/vb6parse/snapshots/tests/statements/runtime_state/error/error_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/runtime_state/error.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: ErrorStatement
      children:
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "53"
    - kind: Newline
      text: "\n"
